@@ -312,7 +312,10 @@ function link_list($message = '')
                 $vc = $validator->validate() ? '' : ' error';
 
                 if ($link_category) {
-                    $link_category = span(txpspecialchars($link_category_title), array('title' => $link_category));
+                    $link_category = span(txpspecialchars($link_category_title), array(
+                        'title'      => $link_category,
+                        'aria-label' => $link_category,
+                    ));
                 }
 
                 $can_edit = has_privs('link.edit') || ($link_author === $txp_user && has_privs('link.edit.own'));
@@ -342,7 +345,10 @@ function link_list($message = '')
                     ).
                     (
                         $show_authors
-                        ? td(span(txpspecialchars($link_realname), array('title' => $link_author)), '', 'txp-list-col-author name')
+                        ? td(span(txpspecialchars($link_realname), array(
+                            'title'      => $link_author,
+                            'aria-label' => $link_author,
+                        )), '', 'txp-list-col-author name')
                         : ''
                     )
                 );
