@@ -131,6 +131,7 @@ class Paginator
             ), array(
                 'class'        => $class,
                 'title'        => gTxt('view_per_page', array('{page}' => $qty)),
+                'aria-label'   => gTxt('view_per_page', array('{page}' => $qty)),
                 'aria-pressed' => $aria_pressed,
                 'role'         => 'button',
             ));
