@@ -1374,7 +1374,10 @@ class Skin extends CommonBase implements SkinInterface
 
                 $tds = td(fInput('checkbox', 'selected[]', $skin_name), '', 'txp-list-col-multi-edit')
                     .hCell(
-                        href(txpspecialchars($skin_name), $editUrl, array('title' => gTxt('edit'))).
+                        href(txpspecialchars($skin_name), $editUrl, array(
+                            'title'      => gTxt('edit'),
+                            'aria-label' => gTxt('edit'),
+                        )).
                         ($numThemes > 1 ? ' | '.href(gTxt('assign_sections'), 'index.php?event=section&step=section_select_skin&skin='.urlencode($skin_name)).
                         (${$event.'_section_count'} > 0 ? sp.tag(gTxt('status_in_use'), 'small', array('class' => 'alert-block alert-pill success')) :
                             (${$event.'_dev_section_count'} > 0 ? sp.tag(gTxt('status_in_use'), 'small', array('class' => 'alert-block alert-pill warning')) : '')
@@ -1409,10 +1412,8 @@ class Skin extends CommonBase implements SkinInterface
                             ${$event.'_'.$name.'_count'},
                             $linkParams,
                             array(
-                                'title' => gTxt(
-                                    $event.'_count_'.$name,
-                                    array('{num}' => ${$event.'_'.$name.'_count'})
-                                )
+                                'title'      => gTxt($event.'_count_'.$name, array('{num}' => ${$event.'_'.$name.'_count'})),
+                                'aria-label' => gTxt($event.'_count_'.$name, array('{num}' => ${$event.'_'.$name.'_count'})),
                             )
                         );
                     } else {
